data/all_generated_tests/raw_wast_tests/call_indirect_ImproperFunctionCallorReturnHandling_4459.wast
;; 8. **Test Description:** Design test cases with complex function call chains involving both direct `call` and `call_indirect` instructions to ensure comprehensive function call chaining behaves correctly.    - **Constraint:** Tests interoperability and correct function invocation sequences.    - **Improper Handling Relation:** Incorrect chaining or call sequences might result in calls to unintended functions or return values.

(assert_invalid
  (module
    (type (func (param i32)))
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 1)
    (func $direct_call (param i32))
    (func $indirect_call_chain (param i32) (result i32)
      (call $direct_call (call_indirect (type 0) (i32.const 0))) (call $direct_call (i32.const 1))
    )
  )
  "type mismatch"
)